Fix spacing between cards in grid

--- a/app/javascript/src/collected_inks/cards/swab-card.scss
+++ b/app/javascript/src/collected_inks/cards/swab-card.scss
@@ -1,5 +1,4 @@
 .fpc-swab-card {
-  margin-block: 15px;
   display: flex;
   flex-direction: column;
   background: var(--fpc-bright-background);
